k8s.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
    name: goapp-deploy
    namespace: kube-system
    labels:
      k8s-app: klyn-examp
spec:
  replicas: 3
  revisionHistoryLimit: 10
  minReadySeconds: 5
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        k8s-app: klyn-examp
    spec:
      containers:
      - image: yusank/klyn-examp:0.0.5
        imagePullPolicy: Always
        name: klyn-examp
        ports:
        - containerPort: 8081
          protocol: TCP
        volumeMounts:
        - name: log-storage
          mountPath: /data/klyn-examp  
        resources:
          limits:
            cpu: 100m
            memory: 100Mi
          requests:
            cpu: 50m
            memory: 50Mi
        livenessProbe:
          tcpSocket:
            port: 8081
          initialDelaySeconds: 10
          timeoutSeconds: 3
        readinessProbe:
          httpGet:
            path: /ping
            port: 8081
          initialDelaySeconds: 10
          timeoutSeconds: 2
      volumes:
      - name: log-storage
        emptyDir: {}    

---
apiVersion: v1
kind: Service
metadata:
  name: goapp-svc
  namespace: kube-system
  labels:
    k8s-app: klyn-examp
spec:
  ports:
    - name: klyn-api
      port: 8081
      protocol: TCP
      targetPort: 8081
  selector:
    k8s-app: klyn-examp

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: goapp-ingress
  namespace: kube-system
spec:
  rules:
  - host: klyn.yusank-k8s.cn
    http:
      paths:
      - path: /klyn
        backend:
          serviceName: goapp-svc
          servicePort: klyn-api
